--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 
 <!-- Guarda el historial de inicio de sesion -->
 
-
+<!-- 
   <script type="module">
     // Importa Firebase SDK
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
@@ -603,4 +603,4 @@
         }
       }
     });
-  </script>
+  </script>  -->
