--- a/configuracion-del-sistema.html
+++ b/configuracion-del-sistema.html
@@ -124,6 +124,10 @@
         <a href="permisos.html" class="config-title">Configuración de Permisos</a>
     </div>
     <div class="config-item">
+        <i class="fa-brands fa-slack icon"></i>
+        <a href="actualiza-logo.html" class="config-title">Actualizar Logotipo</a>
+    </div>
+    <div class="config-item">
         <i class="fas fa-folder-open icon"></i>
         <a href="archivos.html" class="config-title">Archivos</a>
     </div>
@@ -146,6 +150,10 @@
     <div class="config-item">
         <i class="fa-solid fa-chart-line icon"></i>
         <a href="reporte-mas-vendidos.html" class="config-title">Productos del dia mas vendido</a>
+    </div>
+      <div class="config-item">
+        <i class="fa-solid fa-puzzle-piece icon"></i>
+        <a href="plugin.html" class="config-title"> Plugin</a>
     </div>
     <div class="config-item">
         <i class="fas fa-headset icon"></i>
