--- a/chat-retom.html
+++ b/chat-retom.html
@@ -396,7 +396,7 @@
  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 <script>
     function goBack() {
-        window.location.href = 'home-web.html';
+        window.location.href = 'index.html';
     }
 </script>
      
