--- a/plugin.html
+++ b/plugin.html
@@ -94,7 +94,7 @@
 </head>
 <body>
 
-    <div class="icon" onclick="showLink('Punto de Venta', 'https://example.com/punto_de_venta')">
+    <div class="icon" onclick="showLink('Punto de Venta', 'punto-de-venta.html')">
         <i class="fas fa-store"></i> Punto de Venta
     </div>
     <div class="icon" onclick="showLink('Escáner de Precios', 'www.google.com.do')">
