--- a/plugin.html
+++ b/plugin.html
@@ -97,11 +97,11 @@
     <div class="icon" onclick="showLink('Punto de Venta', 'punto-de-venta.html')">
         <i class="fas fa-store"></i> Punto de Venta
     </div>
-    <div class="icon" onclick="showLink('Escáner de Precios', 'www.google.com.do')">
+    <div class="icon" onclick="showLink('Escáner de Precios', 'ver-precio.html')">
         <i class="fas fa-barcode"></i> Verificar Precio
     </div>
-    <div class="icon" onclick="showLink('Totales en Tiempo Real', 'https://example.com/totales_en_tiempo_real')">
-        <i class="fas fa-calculator"></i> Ver Totales
+    <div class="icon" onclick="showLink('Totales en Tiempo Real', 'Vista-Total a Pagar.html')">
+        <i class="fas fa-calculator"></i> Totales tiempo real
     </div>
      
     <div class="loader" id="loader">
