--- a/plugin.html
+++ b/plugin.html
@@ -101,7 +101,7 @@
         <i class="fas fa-barcode"></i> Verificar Precio
     </div>
     <div class="icon" onclick="showLink('Totales en Tiempo Real', 'Vista-Total a Pagar.html')">
-        <i class="fas fa-calculator"></i> precio en tiempo real
+        <i class="fas fa-calculator"></i> Precio en tiempo real
     </div>
      
     <div class="loader" id="loader">
