--- a/plugin.html
+++ b/plugin.html
@@ -94,7 +94,7 @@
 </head>
 <body>
 
-    <div class="icon" onclick="showLink('Punto de Venta', 'punto-de-venta.html')">
+    <div class="icon" onclick="showLink('Punto de Venta', 'https://media.istockphoto.com/id/636379014/es/foto/manos-la-formaci%C3%B3n-de-una-forma-de-coraz%C3%B3n-con-silueta-al-atardecer.jpg?s=612x612&w=0&k=20&c=R2BE-RgICBnTUjmxB8K9U0wTkNoCKZRi-Jjge8o_OgE=')">
         <i class="fas fa-store"></i> Punto de Venta
     </div>
     <div class="icon" onclick="showLink('Escáner de Precios', 'ver-precio.html')">
