--- a/ver-precio.html
+++ b/ver-precio.html
@@ -186,7 +186,7 @@
     </div>
   </div>
 
-  <img src="https://firebasestorage.googleapis.com/v0/b/inventario-35d6b.appspot.com/o/pngwing.com%20(2).png?alt=media&token=36f98ac5-e01e-444c-84ec-24a56812ff3b" alt="Logo" class="logo">
+  <img src="https://firebasestorage.googleapis.com/v0/b/inventario-35d6b.appspot.com/o/coigo%20barra%20logo.png?alt=media&token=f021e62e-2674-4752-a99b-ff2dfcdf3782" alt="Logo" class="logo">
 
   <div class="container">
     <h1>Buscador EAN/UPC</h1>
