--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@
     </style>
 </head>
 <body>
+<img id="offline-image" src="tu-imagen.png" alt="Sin conexión a Internet">
+    <div id="alert">¡No hay conexión a Internet!</div>
 
 <div class="login-container">
     <h3>Bienvenido a RETOM</h3>
