--- a/index.html
+++ b/index.html
@@ -227,8 +227,6 @@
     </style>
 </head>
 <body>
-<img id="offline-image" src="tu-imagen.png" alt="Sin conexión a Internet">
-    <div id="alert">¡No hay conexión a Internet!</div>
 
 <div class="login-container">
     <h3>Bienvenido a RETOM</h3>
@@ -611,76 +609,54 @@
 
 
 
-<style>
-        
-#alert {
-    display: none;
-    background-color: #e63946;
-    color: white;
-    padding: 20px;
-    margin: 20px auto;
-    border-radius: 5px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-    transition: opacity 0.3s;
-    animation: fadeIn 0.5s;
-    position: fixed; /* Fija el elemento en la pantalla */
-    top: 20px; /* Distancia desde la parte superior */
-    left: 50%; /* Centra horizontalmente */
-    transform: translateX(-50%); /* Ajusta el centro */
-    z-index: 1000; /* Asegura que esté por encima */
-}
 
-#offline-image {
-    display: none; /* Ocultar imagen por defecto */
-    max-width: 150px; /* Imagen más reducida */
-    height: auto;
-    margin: 20px auto; /* Centrar imagen */
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-    animation: slideIn 0.5s;
-    position: fixed; /* Fija el elemento en la pantalla */
-    top: 80px; /* Distancia desde la parte superior */
-    left: 50%; /* Centra horizontalmente */
-    transform: translateX(-50%); /* Ajusta el centro */
-    z-index: 1000; /* Asegura que esté por encima */
-}
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
 
-h1 {
-    font-size: 2.5em;
-    margin-bottom: 20px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-    position: fixed; /* Fija el elemento en la pantalla */
-    top: 140px; /* Distancia desde la parte superior */
-    left: 50%; /* Centra horizontalmente */
-    transform: translateX(-50%); /* Ajusta el centro */
-    z-index: 1000; /* Asegura que esté por encima */
-}
+        #modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
+        }
 
-@keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
-}
+        #alert {
+            background-color: #e63946;
+            color: white;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+            transition: opacity 0.3s;
+            animation: fadeIn 0.5s;
+        }
 
-@keyframes slideIn {
-    from { transform: translateY(-20px); opacity: 0; }
-    to { transform: translateY(0); opacity: 1; }
-}
-
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
     </style>
 </head>
 <body>
-    
+    <div id="modal">
+        <div id="alert">¡No hay conexión a Internet!</div>
+    </div>
 
     <script>
         function updateConnectionStatus() {
-            const alertDiv = document.getElementById('alert');
-            const offlineImage = document.getElementById('offline-image');
+            const modal = document.getElementById('modal');
             if (navigator.onLine) {
-                alertDiv.style.display = 'none'; // Ocultar alerta si hay conexión
-                offlineImage.style.display = 'none'; // Ocultar imagen
+                modal.style.display = 'none'; // Ocultar modal si hay conexión
             } else {
-                alertDiv.style.display = 'block'; // Mostrar alerta si no hay conexión
-                offlineImage.style.display = 'block'; // Mostrar imagen
+                modal.style.display = 'flex'; // Mostrar modal si no hay conexión
             }
         }
 
@@ -693,4 +669,3 @@ h1 {
     </script>
 </body>
 </html>
-
