--- a/punto-de-venta.html
+++ b/punto-de-venta.html
@@ -667,7 +667,7 @@ footer .icon:hover {
     onAuthStateChanged(auth, user => {
         if (!user) {
             // Si el usuario no está autenticado, redirigir a index.html
-            window.location.href = "index.html";
+            window.location.href = "login-punto-de-venta.html";
         } else {
             // El usuario está autenticado, puedes mostrar contenido o permitir acceso a la página
             console.log("Usuario autenticado:", user);
